# simplicity_engine

./: .gitignore  .gitmodules  CMakeLists.txt  demo.cpp  main.cpp  readme.md
common/: CMakeLists.txt
common/include/common/: types.h
include/newton/: basic_entity.h  newton.h
include/simplicity/: common_types.h  entity.h  global_events.h  global_events_types.h  input_handler.h  input_handler_types.h  renderer.h  renderer_types.h  resource_manager.h  resource_types.h  shader.h  shader_types.h  simplicity.h  simplicity_types.h  world.h  world_types.h
include/simplicity/types/: entity_types.h  world_types.h
modules/: .gitignore  CMakeLists.txt
modules/glad_generated/: CMakeLists.txt
newton/: CMakeLists.txt
newton/include/newton/: basic_entity.h  newton.h
newton/src/: basic_entity.cpp  newton.cpp
renderer/: CMakeLists.txt
renderer/include/renderer/: drawable.h  images.h  renderer.h  shader.h  shader_types.h
renderer/src/: drawable.cpp  images.cpp  renderer.cpp  shader.cpp
shaders/: basic.fs  basic.vs
src/: basic_entity.cpp  entity.cpp  global_events.cpp  input_handler.cpp  newton.cpp  renderer.cpp  resource_manager.cpp  shader.cpp  simplicity.cpp  world.cpp
test/: CMakeLists.txt  shader_tests.cpp  simplicity_tests.cpp  test_main.cpp
